--- a/src/components/ContentContainer.module.css
+++ b/src/components/ContentContainer.module.css
@@ -2,4 +2,15 @@
     background-color: #333333;
     flex-basis: 80%;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.content-item {
+    background-color: grey;
+    margin: 10px 20px;
+    font-size: 40px;
+    text-align: center;
+    flex-grow: 1;
 }
