--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -2,4 +2,13 @@
     background: #0f0f0f;
     flex-basis: 10%;
     border-right: 2px solid #f8f8f8;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.button {
+    margin: 20px 20px;
+    padding: 20px 0px;
+    flex-grow: 1;
 }
