--- a/src/components/ContentContainer.module.css
+++ b/src/components/ContentContainer.module.css
@@ -1,7 +1,6 @@
 .content {
     background-color: #333333;
-    flex-basis: 80%;
-    flex-grow: 1;
+    flex: 3 4 75%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -9,8 +8,12 @@
 
 .content-item {
     background-color: grey;
-    margin: 10px 20px;
+    margin: 5px 15px;
     font-size: 40px;
     text-align: center;
     flex-grow: 1;
+}
+
+.content-item:hover {
+    background: green;
 }
