--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,6 +1,6 @@
 .nav {
     background: #0f0f0f;
-    flex-basis: 10%;
+    flex: 4 4 10%;
     border-right: 2px solid #f8f8f8;
     display: flex;
     flex-direction: column;
@@ -8,7 +8,11 @@
 }
 
 .button {
-    margin: 20px 20px;
+    margin: 10px 10px;
     padding: 20px 0px;
-    flex-grow: 1;
+    flex-grow: 0;
+}
+
+.button:hover {
+    background-color: green;
 }
