--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,6 @@
   background-color: green;
   height: 100vh;
   width: 100vw;
-  display:  flex;
+  display: grid;
+  grid-template-rows: max-content 1fr;
 }
