--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,18 +1,69 @@
 .nav {
-    background: #0f0f0f;
-    flex: 4 4 10%;
-    border-right: 2px solid #f8f8f8;
+    background: whitesmoke;
+    display: grid;
+    height: max-content;
+    padding: 20px 0px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content;
+}
+
+.navLeft {
+    pointer-events: none;
+    padding-left: 20px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    height: fit-content;
+    justify-content: flex-start;
+    font-size: 2rem;
+}
+
+.navRight {
+    align-items: center;
+    padding-right: 20px;
+    display: flex;
+    height: 100%;
+    justify-content: flex-end;
+    column-gap: 20px;
 }
 
 .button {
-    margin: 10px 10px;
-    padding: 20px 0px;
-    flex-grow: 0;
+    font-size: 1.1rem;
+    height: max-content;
+    border-bottom: 2px solid whitesmoke;
+    animation: nav-color-default 0.2s;
+    animation-fill-mode: forwards;
+    transition: transform 0.1s ease-in;
 }
 
 .button:hover {
-    background-color: green;
+    transform: translateY(-5px);
+    cursor: pointer;
+    animation: nav-color 0.2s;
+    animation-fill-mode: forwards;
+}
+
+.name {
+    font-weight: bolder;
+    font-size: 2.2rem;
+    color: #00B8E8;
+    text-shadow: 1.5px 1.5px black;
+}
+
+@keyframes nav-color {
+    from {
+        border-color: whitesmoke;
+    }
+
+    to {
+        border-color: #00B8E8;
+    }
+}
+
+@keyframes nav-color-default {
+    from {
+        border-color: #00B8E8;
+    }
+
+    to {
+        border-color: whitesmoke;
+    }
 }
