--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -22,13 +22,13 @@
     display: flex;
     height: 100%;
     justify-content: flex-end;
-    column-gap: 20px;
+    column-gap: 30px;
 }
 
 .button {
     text-decoration: none;
     color: black;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     height: max-content;
     border-bottom: 2px solid whitesmoke;
     animation: nav-color-default 0.2s;
@@ -44,17 +44,18 @@
 }
 
 .name {
+    letter-spacing: 3px;
     pointer-events: auto;
     font-weight: bolder;
     font-size: 2.2rem;
-    color: #00B8E8;
+    color: #9c5cff;
     text-shadow: 1.5px 1.5px black;
-    transition: color 0.075s ease-out;
+    transition: color 0.1s ease-out;
 }
 
 .name:hover {
     cursor: default;
-    color: #66EDAB;
+    color: #BFFF5C;
 }
 
 @keyframes nav-color {
@@ -63,13 +64,13 @@
     }
 
     to {
-        border-color: #00B8E8;
+        border-color: #9c5cff;
     }
 }
 
 @keyframes nav-color-default {
     from {
-        border-color: #00B8E8;
+        border-color: #9c5cff;
     }
 
     to {
