--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,18 +1,19 @@
 .nav {
     background: whitesmoke;
     display: grid;
-    height: max-content;
-    padding: 20px 0px;
+    height: fit-content;
+    padding: 0px 0px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: min-content;
+    height: 80px;
 }
 
 .nav-left {
     pointer-events: none;
     padding-left: 20px;
     display: flex;
-    height: fit-content;
+    height: 100%;
     justify-content: flex-start;
+    align-items: center;
     font-size: 2rem;
 }
 
@@ -29,7 +30,7 @@
     text-decoration: none;
     color: black;
     font-size: 1.3rem;
-    height: max-content;
+    height: fit-content;
     border-bottom: 2px solid whitesmoke;
     animation: nav-color-default 0.2s;
     animation-fill-mode: forwards;
