--- a/src/components/GraphPage.module.css
+++ b/src/components/GraphPage.module.css
@@ -6,24 +6,36 @@
 }
 
 .playlist-container {
-    border: 1px solid white;
     overflow: scroll;
     flex-direction: column;
     row-gap: 20px;
     height: 100%;
-    background-color: green;
     box-sizing: inherit;
+    background-color: rgb(24, 24, 24);
 }
 
-.playlist-container span {
+.playlist {
+    line-height: 30px;
+    display: block;
+    color: rgb(202, 202, 202);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     height: 30px;
-    padding: 0px 10px;
-    display: block;
+    padding: 0px 15px;
     box-sizing: border-box;
-    margin: 5px 0px;
+    margin: 10px 0px;
+    -webkit-transition: transform 0.2s cubic-bezier(0.5, 0.25, 0, 1);
+    -moz-transition: transform 0.2s cubic-bezier(0.5, 0.25, 0, 1);
+    -o-transition: transform 0.2s cubic-bezier(0.5, 0.25, 0, 1);
+    transition: transform 0.2s cubic-bezier(0.5, 0.25, 0, 1);
+}
+
+.playlist:hover {
+    color: white;
+    cursor: pointer;
+    transform: translateX(8px);
+    border-left: 2px solid white;
 }
 
 .graph-container {
@@ -31,7 +43,6 @@
     align-items: center;
     display: flex;
     box-sizing: inherit;
-    border: 1px solid red;
     font-size: 1.5rem;
 }
 
@@ -67,8 +78,8 @@
 .bars div {
     text-align: right;
     overflow: hidden;
-    color: white;
-    background-color: green;
+    color: black;
+    background-color: whitesmoke;
     animation-name: animateBar;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
@@ -80,21 +91,21 @@
 }
 
 .medium {
-    animation-duration: 2s;
+    animation-duration: 1.5s;
     width: 50%;
 }
 
 .long {
-    animation-duration: 3s;
+    animation-duration: 2.5s;
     width: 75%;
 }
 
 @keyframes animateBar {
     from {
-      transform: translateX(-100%);
+        transform: translateX(-100%);
     }
-  
+
     to {
-      transform: translateX(0%);
+        transform: translateX(0%);
     }
-  }
+}
