--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -1,4 +1,44 @@
-.header {
+.container {
+    display: flex;
     justify-content: center;
+    height: 100%;
+    align-items: center;
+    padding: 30px;
+    box-sizing: border-box;
+    /* background-color: rgb(142, 111, 216); */
+    background: linear-gradient(to top, #4400ffba, #9907facc), url(https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1500w,f_auto,q_auto:best/newscms/2019_09/2769481/190228-headphones-music-se-152p.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.header {
+    text-align: center;
+    height: 80%;
+    width: 50%;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+    box-sizing: border-box;
+    padding: 50px;
+    margin: 50px;
+    border-radius: 15px;
+}
+
+.header span {
+    display: block;
+    padding: 100px;
+    font-size: 40px;
+    text-align: center;
+}
+
+button {
     color: aliceblue;
+    border: solid 4px;
+    background: transparent;
+    font-size: 35px;
+    padding: 11px;
+    border-radius: 20px;
+}
+
+button:hover {
+    border-color: #9907facc;
 }
