--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,5 +1,5 @@
 .nav {
-    background: whitesmoke;
+    background: #ffffff;
     display: grid;
     height: fit-content;
     padding: 0px 0px;
@@ -31,7 +31,7 @@
     color: black;
     font-size: 1.3rem;
     height: fit-content;
-    border-bottom: 2px solid whitesmoke;
+    border-bottom: 2px solid rgb(142, 111, 216);
     animation: nav-color-default 0.2s;
     animation-fill-mode: forwards;
     transition: transform 0.1s ease-in;
@@ -49,7 +49,7 @@
     pointer-events: auto;
     font-weight: bolder;
     font-size: 2.2rem;
-    color: #9c5cff;
+    color: rgb(185, 59, 243);
     text-shadow: 1.5px 1.5px black;
     transition: color 0.1s ease-out;
     padding: 0px 50px;
@@ -57,16 +57,16 @@
 
 .name:hover {
     cursor: default;
-    color: #BFFF5C;
+    color: #ffcb5c;
 }
 
 @keyframes nav-color {
     from {
-        border-color: whitesmoke;
+        border-color: #ffffff;
     }
 
     to {
-        border-color: #9c5cff;
+        border-color: rgb(142, 111, 216);
     }
 }
 
@@ -76,6 +76,6 @@
     }
 
     to {
-        border-color: whitesmoke;
+        border-color: #ffffff;
     }
 }
