--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -6,41 +6,75 @@
     padding: 30px;
     box-sizing: border-box;
     /* background-color: rgb(142, 111, 216); */
-    background: linear-gradient(to top, #9907facc, #9c5cff), url(https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1500w,f_auto,q_auto:best/newscms/2019_09/2769481/190228-headphones-music-se-152p.jpg);
+    background: linear-gradient(to top, #270d21cc, #9c5cff), url(https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1500w,f_auto,q_auto:best/newscms/2019_09/2769481/190228-headphones-music-se-152p.jpg);
+
     background-repeat: no-repeat;
     background-size: 100%;
 }
 
+.graphy {
+    animation-name: example;
+    animation-duration: 4s;
+}
 
+@keyframes example {
+    from {
+        color: rgb(110, 26, 150);
+    }
+
+    to {
+        color: rgba(152, 11, 196, 0.884);
+    }
+}
 
 .header {
+    display: flex;
     text-align: center;
-    height: 80%;
+    /* height: 50%; */
     width: 50%;
     justify-content: center;
     color: rgb(255, 255, 255);
     box-sizing: border-box;
-    padding: 50px;
-    margin: 50px;
+    padding: 200px;
+    margin: 540px;
     border-radius: 15px;
 }
 
-.header span {
+.logo {
     display: block;
-    padding: 100px;
-    font-size: 40px;
+    width: 70px;
     text-align: center;
+    margin-left: 25px;
+}
+
+.spot {
+    color: rgb(68, 231, 68)
 }
 
 button {
+    display: flex;
+    grid-template-columns: 1fr 1fr;
     color: aliceblue;
     border: solid 4px;
     background: transparent;
     font-size: 35px;
-    padding: 11px;
-    border-radius: 20px;
+    border-radius: 70px;
+    justify-content: center;
+    align-items: center;
+    bottom: 500px;
+    width: 100%;
+
 }
 
 button:hover {
-    border-color: #9907facc;
+    background: linear-gradient(to right, #da0faacc, #9c5cff);
+    /* background-color: #b45add; */
+    border-color: #9a3dd8cc;
+}
+
+.word {
+    padding: 0px 30px;
+    /* margin: 10px; */
+    font-size: 30px;
+    justify-content: center;
 }
