--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -27,21 +27,43 @@
     }
 }
 
+.login {
+    display: inline;
+    position: absolute;
+    /* height: 100%; */
+    /* width: 100%; */
+    justify-content: center;
+    align-items: center;
+    /* height: 20vh; */
+    top: 25%;
+}
+
+.pic {
+    width: 80px;
+    margin-right: 30px;
+}
+
+.pic2 {
+    color: aliceblue;
+}
+
+.pic3 {
+    color: rgb(39, 212, 62);
+    margin-left: 30px;
+}
+
 .header {
-    display: flex;
     text-align: center;
-    /* height: 50%; */
-    width: 50%;
+    align-items: center;
     justify-content: center;
     color: rgb(255, 255, 255);
     box-sizing: border-box;
-    padding: 200px;
-    margin: 540px;
+    padding: 10px;
+    margin: 20px;
     border-radius: 15px;
 }
 
 .logo {
-    display: block;
     width: 70px;
     text-align: center;
     margin-left: 25px;
@@ -53,7 +75,6 @@
 
 button {
     display: flex;
-    grid-template-columns: 1fr 1fr;
     color: aliceblue;
     border: solid 4px;
     background: transparent;
@@ -61,7 +82,6 @@ button {
     border-radius: 70px;
     justify-content: center;
     align-items: center;
-    bottom: 500px;
     width: 100%;
 
 }
@@ -70,6 +90,11 @@ button:hover {
     background: linear-gradient(to right, #da0faacc, #9c5cff);
     /* background-color: #b45add; */
     border-color: #9a3dd8cc;
+}
+
+button:active {
+    color: rgb(152, 50, 199);
+    background: rgb(235, 232, 217);
 }
 
 .word {
