--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  background-color: green;
+  /* background-color: green; */
+  background: linear-gradient(to bottom right, #270d21cc, #9c5cff), url(https://i0.wp.com/www.additudemag.com/wp-content/uploads/2020/06/GettyImages-1201128952-e1591819070655.jpg);
   height: 100vh;
   width: 100vw;
   display: grid;
@@ -7,6 +8,6 @@
 }
 
 .content-container {
-  background-color: rgb(75, 75, 75);
+  /* background-color: rgb(75, 75, 75); */
   height: calc(100vh - 80px);
 }
