--- a/src/components/GraphPage.module.css
+++ b/src/components/GraphPage.module.css
@@ -11,7 +11,7 @@
     row-gap: 20px;
     height: 100%;
     box-sizing: inherit;
-    background-color: rgb(24, 24, 24);
+    background-color: hsla(0, 0%, 0%, 0.747);
 }
 
 .playlist {
