--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -33,11 +33,8 @@
 .login {
     display: inline;
     position: absolute;
-    /* height: 100%; */
-    /* width: 100%; */
     justify-content: center;
     align-items: center;
-    /* height: 20vh; */
     top: 25%;
 }
 
@@ -82,6 +79,7 @@ button {
     width: 100%;
     border: solid 3px#1DB954;
     border-radius: 70px;
+    box-shadow: 0px 13px 6px #00000070;
     /* border: none; */
 
     transition: all 0.1s ease-out;
@@ -95,13 +93,16 @@ button:hover {
     /* border-color: #9a3dd8cc; */
     transform: scale(1.02);
     cursor: pointer;
+    box-shadow: 0px 10px 60px#04702a9d;
 }
 
 button:active {
     /* background: linear-gradient(to bottom left, #7644c2, #960c75cc); */
     background: black;
     transform: scale(1);
+    box-shadow: 0px 10px 30px#04702a9d;
 }
+
 
 .word {
     padding: 0px 30px;
