--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,44 @@
 .App {
   /* background-color: green; */
-  background: linear-gradient(to bottom right, #270d21cc, #9c5cff), url(https://i0.wp.com/www.additudemag.com/wp-content/uploads/2020/06/GettyImages-1201128952-e1591819070655.jpg);
-  background-size: cover;
   height: 100vh;
   width: 100vw;
   display: grid;
   grid-template-rows: max-content 1fr;
+}
+
+.background {
+  height: 150vh;
+  width: 100vw;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background: linear-gradient(to bottom right, #270d21cc, #9c5cff), url(https://i0.wp.com/www.additudemag.com/wp-content/uploads/2020/06/GettyImages-1201128952-e1591819070655.jpg);
+  background-size: 100vmax;
+  transform: scale(1.05);
+  transition: background-size 0.5s ease, background-position 0.5s ease;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.background-hover {
+  background-size: 98vmax;
+}
+
+.background[data-active="1"] {
+  background-position: 0% -25%;
+}
+
+.background[data-active="2"] {
+  background-position: 0% -50%;
+}
+
+.background[data-active="3"] {
+  background-position: 0% -75%;
+}
+
+.background[data-active="4"] {
+  background-position: 0% -100%;
 }
 
 .content-container {
