--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,9 @@
   position: absolute;
   background: linear-gradient(to bottom right, #270d21cc, #9c5cff), url(https://i0.wp.com/www.additudemag.com/wp-content/uploads/2020/06/GettyImages-1201128952-e1591819070655.jpg);
   background-size: 100vmax;
-  transform: scale(1.05);
+  transform: scale(1.08);
+  background-position: 0% 0%;
   transition: background-size 0.5s ease, background-position 0.5s ease;
-  background-position: center;
   background-repeat: no-repeat;
 }
 
