--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,10 @@
   width: 100vw;
   display: grid;
   grid-template-rows: max-content 1fr;
+  min-height: 100vh;
 }
+
+body {}
 
 .background {
   height: 150vh;
@@ -18,6 +21,7 @@
   transform: scale(1.08);
   background-position: 0% 0%;
   transition: background-size 0.5s ease, background-position 0.5s ease;
+  /* background-position: center; */
   background-repeat: no-repeat;
 }
 
