--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ body {
   padding: 0;
 }
 
+body,
+html {
+  height: 100vw;
+  margin: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
