--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   left: 0;
   position: absolute;
   background: linear-gradient(to bottom right, #270d21cc, #9c5cff), url(https://i0.wp.com/www.additudemag.com/wp-content/uploads/2020/06/GettyImages-1201128952-e1591819070655.jpg);
-  background-size: 100vmax;
+  background-size: ''''''''''''''''''''''''''''''''''''''100vmax'''''''''''''''''''''''''''''''''''''';
   transform: scale(1.08);
   background-position: 0% 0%;
   transition: background-size 0.5s ease, background-position 0.5s ease;
