--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
   min-height: 100vh;
 }
 
-body {}
-
 .background {
   height: 150vh;
   width: 100vw;
@@ -17,7 +15,7 @@ body {}
   left: 0;
   position: absolute;
   background: linear-gradient(to bottom right, #270d21cc, #9c5cff), url(https://i0.wp.com/www.additudemag.com/wp-content/uploads/2020/06/GettyImages-1201128952-e1591819070655.jpg);
-  background-size: ''''''''''''''''''''''''''''''''''''''100vmax'''''''''''''''''''''''''''''''''''''';
+  background-size: 100vmax;
   transform: scale(1.08);
   background-position: 0% 0%;
   transition: background-size 0.5s ease, background-position 0.5s ease;
