--- a/src/components/GraphPage.module.css
+++ b/src/components/GraphPage.module.css
@@ -71,11 +71,16 @@
 
 .genres {
     padding: 0px 10px;
-    margin: 10px 0px;
+    margin: 25px 0px;
     border-right: 3px solid whitesmoke;
     display: flex;
     flex-direction: column;
     color: whitesmoke;
+}
+
+.genres span {
+    /* margin-right: 100px; */
+    width: max-content;
 }
 
 .bars {
